# openttd-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  openttd.py  pyproject.toml
openttd_tui/: agent_api.py  app.py  engine.py  screens.py  sounds.py  tiles.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py
